--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
+    "marked": "^14.0.0",
     "next": "15.3.3",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
